[gd_scene load_steps=4 format=3 uid="uid://cijh6wqbmyk68"]

[ext_resource type="Script" path="res://Environment/Sun/sun.gd" id="1_kx81u"]
[ext_resource type="Texture2D" uid="uid://b7jr0hfx11tkg" path="res://Plants/plants.png" id="2_vwywa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8q4f0"]
radius = 53.0094

[node name="Sun" type="Area2D"]
z_index = 3
collision_layer = 128
script = ExtResource("1_kx81u")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vwywa")
region_enabled = true
region_rect = Rect2(14, 141, 99, 97)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8q4f0")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
